goivy/parser/y.output

state 0
	$accept: .top $end 
	top: .    (1)

	.  reduce 1 (src line 667)

	top  goto 1

state 1
	$accept:  top.$end 
	top:  top.PARSER_TOK_USING SYMBOLx 
	top:  top.PARSER_TOK_INCLUDE SYMBOLx 
	top:  top.optexplicit opttemporal PARSER_TOK_AXIOM lgprop 
	top:  top.optexplicit opttemporal PARSER_TOK_PROPERTY labeledfmla optskolem optproof 
	top:  top.PARSER_TOK_CONJECTURE labeledfmla 
	top:  top.optexplicit PARSER_TOK_INVARIANT labeledfmla optproof 
	top:  top.PARSER_TOK_UNPROVABLE PARSER_TOK_INVARIANT labeledfmla optproof 
	top:  top.PARSER_TOK_MODULE modulestart modcat atom optwith PARSER_TOK_EQ PARSER_TOK_LCB top PARSER_TOK_RCB moduleend 
	top:  top.PARSER_TOK_OBJECT objsym objectargs PARSER_TOK_EQ PARSER_TOK_LCB optdotdotdot top PARSER_TOK_RCB objectend 
	top:  top.PARSER_TOK_CLASS objsym objectargs PARSER_TOK_EQ PARSER_TOK_LCB optdotdotdot top PARSER_TOK_RCB objectend 
	top:  top.PARSER_TOK_SUBCLASS objsym PARSER_TOK_OF atype PARSER_TOK_EQ PARSER_TOK_LCB optdotdotdot top PARSER_TOK_RCB objectend 
	top:  top.optexplicit PARSER_TOK_DEFINITION optlabel gdefn optproof 
	top:  top.PARSER_TOK_SCHEMA schdefn 
	top:  top.PARSER_TOK_THEOREM schdefn optproof 
	top:  top.PARSER_TOK_THEOREM labelname schdefnrhs optproof 
	top:  top.PARSER_TOK_PROOF labelname proofstep 
	top:  top.PARSER_TOK_INSTANTIATE insts 
	top:  top.PARSER_TOK_AUTOINSTANCE insts 
	top:  top.symdecl 
	top:  top.PARSER_TOK_RELATION rels 
	top:  top.PARSER_TOK_FUNCTION funs 
	top:  top.PARSER_TOK_DERIVED defns 
	top:  top.optfinite optghost PARSER_TOK_TYPE typesymbol 
	top:  top.optfinite optghost PARSER_TOK_TYPE typesymbol PARSER_TOK_EQ sort 
	top:  top.PARSER_TOK_PROGRESS defns 
	top:  top.PARSER_TOK_RELY atom PARSER_TOK_ARROW atom 
	top:  top.PARSER_TOK_RELY atom 
	top:  top.PARSER_TOK_MIXORD callatom PARSER_TOK_ARROW callatom 
	top:  top.PARSER_TOK_CONCEPT cdefns 
	top:  top.PARSER_TOK_UPDATE apps PARSER_TOK_FROM apps upaxes 
	top:  top.PARSER_TOK_MACRO atom PARSER_TOK_EQ sequence 
	top:  top.optimpex actmeth SYMBOLx optargs optreturns optactiondef 
	top:  top.PARSER_TOK_MIXIN callatom PARSER_TOK_BEFORE callatom 
	top:  top.PARSER_TOK_MIXIN callatom PARSER_TOK_AFTER callatom 
	top:  top.PARSER_TOK_BEFORE atype optargs optreturns sequence 
	top:  top.PARSER_TOK_AFTER atype optargs optreturns topseq 
	top:  top.PARSER_TOK_AROUND atype optargs optreturns PARSER_TOK_LCB actseq optsemi PARSER_TOK_DOTDOTDOT actseq optsemi PARSER_TOK_RCB 
	top:  top.PARSER_TOK_AFTER PARSER_TOK_INIT optargs topseq 
	top:  top.PARSER_TOK_IMPLEMENT atype optargs optreturns topseq 
	top:  top.PARSER_TOK_IMPLEMENT PARSER_TOK_TYPE SYMBOLx PARSER_TOK_WITH SYMBOLx 
	top:  top.opttrusted PARSER_TOK_ISOLATE SYMBOLx optargs PARSER_TOK_EQ callatoms 
	top:  top.opttrusted PARSER_TOK_ISOLATE SYMBOLx optargs PARSER_TOK_EQ callatoms PARSER_TOK_WITH callatoms 
	top:  top.opttrusted PARSER_TOK_ISOLATE SYMBOLx optargs PARSER_TOK_EQ PARSER_TOK_LCB top PARSER_TOK_RCB optwith 
	top:  top.PARSER_TOK_EXTRACT objsym objectargs PARSER_TOK_EQ PARSER_TOK_LCB top PARSER_TOK_RCB optwith 
	top:  top.PARSER_TOK_EXTRACT objsym objectargs PARSER_TOK_EQ callatoms 
	top:  top.PARSER_TOK_EXPORT callatom 
	top:  top.PARSER_TOK_IMPORT callatom 
	top:  top.PARSER_TOK_DELEGATE callatoms optdelegee 
	top:  top.PARSER_TOK_INTERPRET oper PARSER_TOK_ARROW oper 
	top:  top.PARSER_TOK_INTERPRET oper PARSER_TOK_ARROW PARSER_TOK_LCB term PARSER_TOK_DOTS term PARSER_TOK_RCB 
	top:  top.PARSER_TOK_INTERPRET oper PARSER_TOK_ARROW PARSER_TOK_LCB SYMBOLx moresymbols PARSER_TOK_RCB 
	top:  top.PARSER_TOK_ALIAS SYMBOLx PARSER_TOK_EQ callatom 
	top:  top.PARSER_TOK_ATTRIBUTE callatom PARSER_TOK_EQ attributeval 
	top:  top.PARSER_TOK_VARIANT typesymbol PARSER_TOK_OF atype 
	top:  top.PARSER_TOK_VARIANT typesymbol PARSER_TOK_OF atype PARSER_TOK_EQ sort 
	top:  top.PARSER_TOK_NATIVEQUOTE 
	top:  top.PARSER_TOK_SCENARIO PARSER_TOK_LCB sceninit PARSER_TOK_SEMI scentranss PARSER_TOK_RCB 
	top:  top.specimpl PARSER_TOK_LCB top PARSER_TOK_RCB 
	top:  top.PARSER_TOK_STATE SYMBOLx PARSER_TOK_EQ state_expr 
	top:  top.PARSER_TOK_ASSERT SYMBOLx PARSER_TOK_ARROW assert_rhs 
	optexplicit: .    (136)
	optfinite: .    (229)
	optimpex: .    (303)
	opttrusted: .    (281)

	$end  accept
	PARSER_TOK_NATIVEQUOTE  shift 42
	PARSER_TOK_ASSERT  shift 46
	PARSER_TOK_VAR  shift 60
	PARSER_TOK_UNPROVABLE  shift 6
	PARSER_TOK_PROOF  shift 13
	PARSER_TOK_INSTANTIATE  shift 14
	PARSER_TOK_RELATION  shift 17
	PARSER_TOK_INDIV  shift 59
	PARSER_TOK_FUNCTION  shift 18
	PARSER_TOK_DERIVED  shift 19
	PARSER_TOK_CONJECTURE  shift 5
	PARSER_TOK_SCHEMA  shift 11
	PARSER_TOK_THEOREM  shift 12
	PARSER_TOK_TYPE  reduce 229 (src line 3066)
	PARSER_TOK_MODULE  shift 7
	PARSER_TOK_OBJECT  shift 8
	PARSER_TOK_CLASS  shift 9
	PARSER_TOK_SUBCLASS  shift 10
	PARSER_TOK_ACTION  reduce 303 (src line 3571)
	PARSER_TOK_METHOD  reduce 303 (src line 3571)
	PARSER_TOK_BEFORE  shift 29
	PARSER_TOK_AFTER  shift 30
	PARSER_TOK_AROUND  shift 31
	PARSER_TOK_MIXIN  shift 28
	PARSER_TOK_IMPLEMENT  shift 32
	PARSER_TOK_ISOLATE  reduce 281 (src line 3405)
	PARSER_TOK_EXTRACT  shift 34
	PARSER_TOK_TRUSTED  shift 53
	PARSER_TOK_EXPORT  shift 35
	PARSER_TOK_IMPORT  shift 36
	PARSER_TOK_DELEGATE  shift 37
	PARSER_TOK_USING  shift 2
	PARSER_TOK_INCLUDE  shift 3
	PARSER_TOK_INTERPRET  shift 38
	PARSER_TOK_MACRO  shift 26
	PARSER_TOK_ALIAS  shift 39
	PARSER_TOK_ATTRIBUTE  shift 40
	PARSER_TOK_VARIANT  shift 41
	PARSER_TOK_SCENARIO  shift 43
	PARSER_TOK_PROGRESS  shift 21
	PARSER_TOK_RELY  shift 22
	PARSER_TOK_MIXORD  shift 23
	PARSER_TOK_CONCEPT  shift 24
	PARSER_TOK_STATE  shift 45
	PARSER_TOK_UPDATE  shift 25
	PARSER_TOK_EXPLICIT  shift 47
	PARSER_TOK_SPECIFICATION  shift 54
	PARSER_TOK_IMPLEMENTATION  shift 55
	PARSER_TOK_PRIVATE  shift 56
	PARSER_TOK_GLOBAL  shift 57
	PARSER_TOK_COMMON  shift 58
	PARSER_TOK_GHOST  reduce 229 (src line 3066)
	PARSER_TOK_FINITE  shift 52
	PARSER_TOK_PARAMETER  shift 61
	PARSER_TOK_DESTRUCTOR  shift 49
	PARSER_TOK_CONSTRUCTOR  shift 51
	PARSER_TOK_FIELD  shift 50
	PARSER_TOK_AUTOINSTANCE  shift 15
	.  reduce 136 (src line 2344)

	optexplicit  goto 4
	symdecl  goto 16
	constantdecl  goto 48
	optfinite  goto 20
	optimpex  goto 27
	opttrusted  goto 33
	specimpl  goto 44

state 2
	top:  top PARSER_TOK_USING.SYMBOLx 

	PARSER_TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 62

state 3
	top:  top PARSER_TOK_INCLUDE.SYMBOLx 

	PARSER_TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 64

state 4
	top:  top optexplicit.opttemporal PARSER_TOK_AXIOM lgprop 
	top:  top optexplicit.opttemporal PARSER_TOK_PROPERTY labeledfmla optskolem optproof 
	top:  top optexplicit.PARSER_TOK_INVARIANT labeledfmla optproof 
	top:  top optexplicit.PARSER_TOK_DEFINITION optlabel gdefn optproof 
	opttemporal: .    (132)

	PARSER_TOK_INVARIANT  shift 66
	PARSER_TOK_DEFINITION  shift 67
	PARSER_TOK_TEMPORAL  shift 68
	.  reduce 132 (src line 2318)

	opttemporal  goto 65

state 5
	top:  top PARSER_TOK_CONJECTURE.labeledfmla 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_VARIABLE  shift 88
	PARSER_TOK_LABEL  shift 74
	PARSER_TOK_LPAREN  shift 78
	PARSER_TOK_LB  shift 73
	PARSER_TOK_TILDA  shift 81
	PARSER_TOK_DOLLAR  shift 86
	PARSER_TOK_FORALL  shift 82
	PARSER_TOK_EXISTS  shift 83
	PARSER_TOK_TRUE  shift 79
	PARSER_TOK_FALSE  shift 80
	PARSER_TOK_OLD  shift 77
	PARSER_TOK_GLOBALLY  shift 84
	PARSER_TOK_EVENTUALLY  shift 85
	.  error

	term  goto 72
	fmla  goto 70
	appelem  goto 75
	var  goto 76
	SYMBOLx  goto 87
	labelname  goto 71
	labeledfmla  goto 69

state 6
	top:  top PARSER_TOK_UNPROVABLE.PARSER_TOK_INVARIANT labeledfmla optproof 

	PARSER_TOK_INVARIANT  shift 89
	.  error


state 7
	top:  top PARSER_TOK_MODULE.modulestart modcat atom optwith PARSER_TOK_EQ PARSER_TOK_LCB top PARSER_TOK_RCB moduleend 
	modulestart: .    (269)

	.  reduce 269 (src line 3309)

	modulestart  goto 90

state 8
	top:  top PARSER_TOK_OBJECT.objsym objectargs PARSER_TOK_EQ PARSER_TOK_LCB optdotdotdot top PARSER_TOK_RCB objectend 

	PARSER_TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 92
	objsym  goto 91

state 9
	top:  top PARSER_TOK_CLASS.objsym objectargs PARSER_TOK_EQ PARSER_TOK_LCB optdotdotdot top PARSER_TOK_RCB objectend 

	PARSER_TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 92
	objsym  goto 93

state 10
	top:  top PARSER_TOK_SUBCLASS.objsym PARSER_TOK_OF atype PARSER_TOK_EQ PARSER_TOK_LCB optdotdotdot top PARSER_TOK_RCB objectend 

	PARSER_TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 92
	objsym  goto 94

state 11
	top:  top PARSER_TOK_SCHEMA.schdefn 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_LPAREN  shift 98
	.  error

	SYMBOLx  goto 99
	defnlhs  goto 96
	schdefn  goto 95
	dotsym  goto 97

state 12
	top:  top PARSER_TOK_THEOREM.schdefn optproof 
	top:  top PARSER_TOK_THEOREM.labelname schdefnrhs optproof 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_LABEL  shift 74
	PARSER_TOK_LPAREN  shift 98
	PARSER_TOK_LB  shift 73
	.  error

	SYMBOLx  goto 99
	labelname  goto 101
	defnlhs  goto 96
	schdefn  goto 100
	dotsym  goto 97

state 13
	top:  top PARSER_TOK_PROOF.labelname proofstep 

	PARSER_TOK_LABEL  shift 74
	PARSER_TOK_LB  shift 73
	.  error

	labelname  goto 102

state 14
	top:  top PARSER_TOK_INSTANTIATE.insts 

	PARSER_TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 99
	dotsym  goto 106
	inst  goto 104
	modinst  goto 105
	insts  goto 103

state 15
	top:  top PARSER_TOK_AUTOINSTANCE.insts 

	PARSER_TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 99
	dotsym  goto 106
	inst  goto 104
	modinst  goto 105
	insts  goto 107

state 16
	top:  top symdecl.    (20)

	.  reduce 20 (src line 1055)


state 17
	top:  top PARSER_TOK_RELATION.rels 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_LPAREN  shift 98
	.  error

	SYMBOLx  goto 99
	defn  goto 111
	defnlhs  goto 110
	typeddefn  goto 112
	rel  goto 109
	rels  goto 108
	dotsym  goto 97

state 18
	top:  top PARSER_TOK_FUNCTION.funs 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_LPAREN  shift 98
	.  error

	SYMBOLx  goto 99
	defnlhs  goto 116
	typeddefn  goto 115
	fun  goto 114
	funs  goto 113
	dotsym  goto 97

state 19
	top:  top PARSER_TOK_DERIVED.defns 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_LPAREN  shift 98
	.  error

	SYMBOLx  goto 99
	defn  goto 118
	defnlhs  goto 116
	typeddefn  goto 112
	defns  goto 117
	dotsym  goto 97

state 20
	top:  top optfinite.optghost PARSER_TOK_TYPE typesymbol 
	top:  top optfinite.optghost PARSER_TOK_TYPE typesymbol PARSER_TOK_EQ sort 
	optghost: .    (231)

	PARSER_TOK_GHOST  shift 120
	.  reduce 231 (src line 3079)

	optghost  goto 119

state 21
	top:  top PARSER_TOK_PROGRESS.defns 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_LPAREN  shift 98
	.  error

	SYMBOLx  goto 99
	defn  goto 118
	defnlhs  goto 116
	typeddefn  goto 112
	defns  goto 121
	dotsym  goto 97

state 22
	top:  top PARSER_TOK_RELY.atom PARSER_TOK_ARROW atom 
	top:  top PARSER_TOK_RELY.atom 

	PARSER_TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 123
	atom  goto 122

state 23
	top:  top PARSER_TOK_MIXORD.callatom PARSER_TOK_ARROW callatom 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_THIS  shift 126
	PARSER_TOK_METHOD  shift 127
	.  error

	SYMBOLx  goto 123
	atom  goto 125
	callatom  goto 124

state 24
	top:  top PARSER_TOK_CONCEPT.cdefns 

	PARSER_TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 123
	atom  goto 130
	cdefn  goto 129
	cdefns  goto 128

state 25
	top:  top PARSER_TOK_UPDATE.apps PARSER_TOK_FROM apps upaxes 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_VARIABLE  shift 88
	PARSER_TOK_LPAREN  shift 78
	PARSER_TOK_TILDA  shift 81
	PARSER_TOK_DOLLAR  shift 86
	PARSER_TOK_FORALL  shift 82
	PARSER_TOK_EXISTS  shift 83
	PARSER_TOK_TRUE  shift 79
	PARSER_TOK_FALSE  shift 80
	PARSER_TOK_OLD  shift 77
	PARSER_TOK_GLOBALLY  shift 84
	PARSER_TOK_EVENTUALLY  shift 85
	.  error

	term  goto 134
	appelem  goto 75
	var  goto 76
	SYMBOLx  goto 133
	app  goto 132
	apps  goto 131

state 26
	top:  top PARSER_TOK_MACRO.atom PARSER_TOK_EQ sequence 

	PARSER_TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 123
	atom  goto 135

state 27
	top:  top optimpex.actmeth SYMBOLx optargs optreturns optactiondef 

	PARSER_TOK_ACTION  shift 137
	PARSER_TOK_METHOD  shift 138
	.  error

	actmeth  goto 136

state 28
	top:  top PARSER_TOK_MIXIN.callatom PARSER_TOK_BEFORE callatom 
	top:  top PARSER_TOK_MIXIN.callatom PARSER_TOK_AFTER callatom 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_THIS  shift 126
	PARSER_TOK_METHOD  shift 127
	.  error

	SYMBOLx  goto 123
	atom  goto 125
	callatom  goto 139

state 29
	top:  top PARSER_TOK_BEFORE.atype optargs optreturns sequence 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_THIS  shift 142
	.  error

	atype  goto 140
	SYMBOLx  goto 141

state 30
	top:  top PARSER_TOK_AFTER.atype optargs optreturns topseq 
	top:  top PARSER_TOK_AFTER.PARSER_TOK_INIT optargs topseq 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_THIS  shift 142
	PARSER_TOK_INIT  shift 144
	.  error

	atype  goto 143
	SYMBOLx  goto 141

state 31
	top:  top PARSER_TOK_AROUND.atype optargs optreturns PARSER_TOK_LCB actseq optsemi PARSER_TOK_DOTDOTDOT actseq optsemi PARSER_TOK_RCB 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_THIS  shift 142
	.  error

	atype  goto 145
	SYMBOLx  goto 141

state 32
	top:  top PARSER_TOK_IMPLEMENT.atype optargs optreturns topseq 
	top:  top PARSER_TOK_IMPLEMENT.PARSER_TOK_TYPE SYMBOLx PARSER_TOK_WITH SYMBOLx 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_THIS  shift 142
	PARSER_TOK_TYPE  shift 147
	.  error

	atype  goto 146
	SYMBOLx  goto 141

state 33
	top:  top opttrusted.PARSER_TOK_ISOLATE SYMBOLx optargs PARSER_TOK_EQ callatoms 
	top:  top opttrusted.PARSER_TOK_ISOLATE SYMBOLx optargs PARSER_TOK_EQ callatoms PARSER_TOK_WITH callatoms 
	top:  top opttrusted.PARSER_TOK_ISOLATE SYMBOLx optargs PARSER_TOK_EQ PARSER_TOK_LCB top PARSER_TOK_RCB optwith 

	PARSER_TOK_ISOLATE  shift 148
	.  error


state 34
	top:  top PARSER_TOK_EXTRACT.objsym objectargs PARSER_TOK_EQ PARSER_TOK_LCB top PARSER_TOK_RCB optwith 
	top:  top PARSER_TOK_EXTRACT.objsym objectargs PARSER_TOK_EQ callatoms 

	PARSER_TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 92
	objsym  goto 149

35: shift/reduce conflict (shift 127(0), red'n 304(0)) on PARSER_TOK_METHOD
state 35
	top:  top PARSER_TOK_EXPORT.callatom 
	optimpex:  PARSER_TOK_EXPORT.    (304)

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_THIS  shift 126
	PARSER_TOK_METHOD  shift 127
	.  reduce 304 (src line 3577)

	SYMBOLx  goto 123
	atom  goto 125
	callatom  goto 150

36: shift/reduce conflict (shift 127(0), red'n 305(0)) on PARSER_TOK_METHOD
state 36
	top:  top PARSER_TOK_IMPORT.callatom 
	optimpex:  PARSER_TOK_IMPORT.    (305)

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_THIS  shift 126
	PARSER_TOK_METHOD  shift 127
	.  reduce 305 (src line 3582)

	SYMBOLx  goto 123
	atom  goto 125
	callatom  goto 151

state 37
	top:  top PARSER_TOK_DELEGATE.callatoms optdelegee 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_THIS  shift 126
	PARSER_TOK_METHOD  shift 127
	.  error

	SYMBOLx  goto 123
	atom  goto 125
	callatom  goto 153
	callatoms  goto 152

state 38
	top:  top PARSER_TOK_INTERPRET.oper PARSER_TOK_ARROW oper 
	top:  top PARSER_TOK_INTERPRET.oper PARSER_TOK_ARROW PARSER_TOK_LCB term PARSER_TOK_DOTS term PARSER_TOK_RCB 
	top:  top PARSER_TOK_INTERPRET.oper PARSER_TOK_ARROW PARSER_TOK_LCB SYMBOLx moresymbols PARSER_TOK_RCB 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_NATIVEQUOTE  shift 158
	PARSER_TOK_PLUS  shift 165
	PARSER_TOK_MINUS  shift 166
	PARSER_TOK_TIMES  shift 167
	PARSER_TOK_DIV  shift 168
	PARSER_TOK_EQ  shift 159
	PARSER_TOK_LE  shift 160
	PARSER_TOK_LT  shift 161
	PARSER_TOK_GE  shift 162
	PARSER_TOK_GT  shift 163
	PARSER_TOK_PTO  shift 164
	PARSER_TOK_THIS  shift 142
	.  error

	atype  goto 155
	SYMBOLx  goto 141
	oper  goto 154
	relop  goto 156
	infix  goto 157

state 39
	top:  top PARSER_TOK_ALIAS.SYMBOLx PARSER_TOK_EQ callatom 

	PARSER_TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 169

state 40
	top:  top PARSER_TOK_ATTRIBUTE.callatom PARSER_TOK_EQ attributeval 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_THIS  shift 126
	PARSER_TOK_METHOD  shift 127
	.  error

	SYMBOLx  goto 123
	atom  goto 125
	callatom  goto 170

state 41
	top:  top PARSER_TOK_VARIANT.typesymbol PARSER_TOK_OF atype 
	top:  top PARSER_TOK_VARIANT.typesymbol PARSER_TOK_OF atype PARSER_TOK_EQ sort 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_THIS  shift 173
	.  error

	SYMBOLx  goto 172
	typesymbol  goto 171

state 42
	top:  top PARSER_TOK_NATIVEQUOTE.    (57)

	.  reduce 57 (src line 1625)


state 43
	top:  top PARSER_TOK_SCENARIO.PARSER_TOK_LCB sceninit PARSER_TOK_SEMI scentranss PARSER_TOK_RCB 

	PARSER_TOK_LCB  shift 174
	.  error


state 44
	top:  top specimpl.PARSER_TOK_LCB top PARSER_TOK_RCB 

	PARSER_TOK_LCB  shift 175
	.  error


state 45
	top:  top PARSER_TOK_STATE.SYMBOLx PARSER_TOK_EQ state_expr 

	PARSER_TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 176

state 46
	top:  top PARSER_TOK_ASSERT.SYMBOLx PARSER_TOK_ARROW assert_rhs 

	PARSER_TOK_PRESYMBOL  shift 63
	.  error

	SYMBOLx  goto 177

state 47
	optexplicit:  PARSER_TOK_EXPLICIT.    (137)

	.  reduce 137 (src line 2350)


state 48
	symdecl:  constantdecl.    (191)

	.  reduce 191 (src line 2758)


state 49
	symdecl:  PARSER_TOK_DESTRUCTOR.tterms 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_LPAREN  shift 182
	.  error

	SYMBOLx  goto 181
	tapp  goto 180
	tterm  goto 179
	tterms  goto 178

state 50
	symdecl:  PARSER_TOK_FIELD.tterms 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_LPAREN  shift 182
	.  error

	SYMBOLx  goto 181
	tapp  goto 180
	tterm  goto 179
	tterms  goto 183

state 51
	symdecl:  PARSER_TOK_CONSTRUCTOR.tterms 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_LPAREN  shift 182
	.  error

	SYMBOLx  goto 181
	tapp  goto 180
	tterm  goto 179
	tterms  goto 184

state 52
	optfinite:  PARSER_TOK_FINITE.    (230)

	.  reduce 230 (src line 3072)


state 53
	opttrusted:  PARSER_TOK_TRUSTED.    (282)

	.  reduce 282 (src line 3411)


state 54
	specimpl:  PARSER_TOK_SPECIFICATION.    (308)

	.  reduce 308 (src line 3606)


state 55
	specimpl:  PARSER_TOK_IMPLEMENTATION.    (309)

	.  reduce 309 (src line 3614)


state 56
	specimpl:  PARSER_TOK_PRIVATE.    (310)

	.  reduce 310 (src line 3621)


state 57
	specimpl:  PARSER_TOK_GLOBAL.    (311)

	.  reduce 311 (src line 3628)


state 58
	specimpl:  PARSER_TOK_COMMON.    (312)

	.  reduce 312 (src line 3635)


state 59
	constantdecl:  PARSER_TOK_INDIV.tterms 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_LPAREN  shift 182
	.  error

	SYMBOLx  goto 181
	tapp  goto 180
	tterm  goto 179
	tterms  goto 185

state 60
	constantdecl:  PARSER_TOK_VAR.tterms 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_LPAREN  shift 182
	.  error

	SYMBOLx  goto 181
	tapp  goto 180
	tterm  goto 179
	tterms  goto 186

state 61
	constantdecl:  PARSER_TOK_PARAMETER.parameter 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_LPAREN  shift 182
	.  error

	SYMBOLx  goto 181
	parameter  goto 187
	tapp  goto 180
	tterm  goto 188

state 62
	top:  top PARSER_TOK_USING SYMBOLx.    (2)
	SYMBOLx:  SYMBOLx.PARSER_TOK_LB SYMsubscr PARSER_TOK_RB 

	PARSER_TOK_LB  shift 189
	.  reduce 2 (src line 702)


state 63
	SYMBOLx:  PARSER_TOK_PRESYMBOL.    (62)

	.  reduce 62 (src line 1693)


state 64
	top:  top PARSER_TOK_INCLUDE SYMBOLx.    (3)
	SYMBOLx:  SYMBOLx.PARSER_TOK_LB SYMsubscr PARSER_TOK_RB 

	PARSER_TOK_LB  shift 189
	.  reduce 3 (src line 708)


state 65
	top:  top optexplicit opttemporal.PARSER_TOK_AXIOM lgprop 
	top:  top optexplicit opttemporal.PARSER_TOK_PROPERTY labeledfmla optskolem optproof 

	PARSER_TOK_AXIOM  shift 190
	PARSER_TOK_PROPERTY  shift 191
	.  error


state 66
	top:  top optexplicit PARSER_TOK_INVARIANT.labeledfmla optproof 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_VARIABLE  shift 88
	PARSER_TOK_LABEL  shift 74
	PARSER_TOK_LPAREN  shift 78
	PARSER_TOK_LB  shift 73
	PARSER_TOK_TILDA  shift 81
	PARSER_TOK_DOLLAR  shift 86
	PARSER_TOK_FORALL  shift 82
	PARSER_TOK_EXISTS  shift 83
	PARSER_TOK_TRUE  shift 79
	PARSER_TOK_FALSE  shift 80
	PARSER_TOK_OLD  shift 77
	PARSER_TOK_GLOBALLY  shift 84
	PARSER_TOK_EVENTUALLY  shift 85
	.  error

	term  goto 72
	fmla  goto 70
	appelem  goto 75
	var  goto 76
	SYMBOLx  goto 87
	labelname  goto 71
	labeledfmla  goto 192

state 67
	top:  top optexplicit PARSER_TOK_DEFINITION.optlabel gdefn optproof 
	optlabel: .    (138)

	PARSER_TOK_LABEL  shift 74
	PARSER_TOK_LB  shift 73
	.  reduce 138 (src line 2357)

	labelname  goto 194
	optlabel  goto 193

state 68
	opttemporal:  PARSER_TOK_TEMPORAL.    (133)

	.  reduce 133 (src line 2324)


state 69
	top:  top PARSER_TOK_CONJECTURE labeledfmla.    (6)

	.  reduce 6 (src line 807)


state 70
	labeledfmla:  fmla.    (125)

	.  reduce 125 (src line 2243)


state 71
	labeledfmla:  labelname.fmla 

	PARSER_TOK_PRESYMBOL  shift 63
	PARSER_TOK_VARIABLE  shift 88
	PARSER_TOK_LPAREN  shift 78
	PARSER_TOK_TILDA  shift 81
	PARSER_TOK_DOLLAR  shift 86
	PARSER_TOK_FORALL  shift 82
	PARSER_TOK_EXISTS  shift 83
	PARSER_TOK_TRUE  shift 79
	PARSER_TOK_FALSE  shift 80
	PARSER_TOK_OLD  shift 77
	PARSER_TOK_GLOBALLY  shift 84
	PARSER_TOK_EVENTUALLY  shift 85
	.  error

	term  goto 72
	fmla  goto 195
	appelem  goto 75
	var  goto 76
	SYMBOLx  goto 87
